# plume_experiments

./: .gitignore  CMakeLists.txt  ChordStrategy.cpp  ChordStrategy.h  CompositePlume.cpp  CompositePlume.h  Ellipse.cpp  Ellipse.h  JohnSpokeStrategy.cpp  JohnSpokeStrategy.h  KDTree.cpp  KDTree.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Plume.h  Point.cpp  Point.h  PointStrategy.cpp  PointStrategy.h  PointUtil.cpp  PointUtil.h  RandomUtil.cpp  RandomUtil.h  SearchStrategy.cpp  SearchStrategy.h  SearchStrategyFactory.h  SpokeStrategy.cpp  SpokeStrategy.h  TSP.cpp  TSP.h  convergence.cpp  hits.cpp  main.cpp  manhattan.cpp  render.py  sketch.cpp  sketchalgorithmfinal.cpp  sketchalgorithmmain.cpp  (+3 more)
